--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
 <header>
-  Heisann
+  Header
 </header>
 
-<meny>
-Meny
-</meny>
+<nav>
+Navigation
+</nav>
 
 <main>
 <div class="grid-container">
